<resources>
    <string name="app_name">Airound</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_Confirm_password">Confirm Password</string>

    <string name="action_sign_in">Sign in or register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_forgot_pw_short">Forgot P/W</string>
    <string name="action_clear">Filter Clear</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_dismach_password">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect">This value is incorrect</string>

    <string name="max_length_pw">12</string>
    <string name="max_length_name">10</string>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_forgotpw">Forgot pw</string>
    <string name="title_activity_main">Parka</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_mylocation">My Location</string>
    <string name="action_building">Building</string>
    <string name="action_indoor">Indoor</string>
    <string name="action_traffic">Traffic</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--  URL -->
    <string name="getAllZoneInfo">http://192.168.1.134:3000/getAllZoneInfo</string>
    <string name="insertNewLocation">http://192.168.1.134:3000/insertNewLocation</string>
    <string name="deleteLocation">http://192.168.1.134:3000/deleteLocation</string>

    <string-array name="heero">
        <item>1 mi</item>
        <item>2 mi</item>
        <item>3 mi</item>
        <item>5 mi</item>
        <item>10 mi</item>
        <item>15 mi</item>
        <item>30 mi</item>
    </string-array>

</resources>
