<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_mylocation"
        android:orderInCategory="1"
        android:title="@string/action_mylocation"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_building"
        android:orderInCategory="2"
        android:title="@string/action_building"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_indoor"
        android:orderInCategory="3"
        android:title="@string/action_indoor"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_traffic"
        android:orderInCategory="4"
        android:title="@string/action_traffic"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="search" />

</menu>
